Fix Gallery item alignment after #4516

--- a/styles/widgets/common/gallery.less
+++ b/styles/widgets/common/gallery.less
@@ -44,7 +44,6 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
 }
 
 .dx-gallery .dx-gallery-item-loop {
